[package]
name = "AOC2019"
version = "0.1.0"
authors = ["Joshy Orndorff"]
edition = "2018"

[workspace]
members = [
  "day01",
  "day02",
  "day03",
  "day04",
  "day06",
]

[[bin]]
name = "day1"
path = "day01/src/main.rs"

[[bin]]
name = "day2"
path = "day02/src/main.rs"

[[bin]]
name = "day3"
path = "day02/src/main.rs"
